Added basic WebGL world.

--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,26 @@
 	<head>
 		<title>Wat</title>
 
+		<style type="text/css">
+			* { margin: 0; padding: 0; }
+		</style>
+
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-		<script type="text/javascript" src="/res/js/lib/stats.min.js"></script>
-		<script type="text/javascript" src="/res/js/lib/three.min.js"></script>
+		<script type="text/javascript" src="/res/js/lib/Stats.min.js"></script>
+		<script type="text/javascript" src="/res/js/lib/THREE-r58.min.js"></script>
+		<script type="text/javascript" src="/res/js/lib/THREEx.DomEvent.js"></script>
+		<script type="text/javascript" src="/res/js/lib/THREEx.KeyboardState.js"></script>
+		<script type="text/javascript" src="/res/js/lib/THREE.FlyControlsVelocity.js"></script>
 
 		<script type="text/javascript" src="res/js/lib/ClientComms.js"></script>
+
+		<script type="text/javascript" src="res/js/framework/Prototypes.js"></script>
+		<script type="text/javascript" src="res/js/framework/Inheritance.js"></script>
+		<script type="text/javascript" src="res/js/framework/GameObject.js"></script>
+		<script type="text/javascript" src="res/js/framework/Renderer.js"></script>
+		<script type="text/javascript" src="res/js/framework/SceneManager.js"></script>
+
+		<script type="text/javascript" src="res/js/gameObjects/Skybox.js"></script>
 	</head>
 
 	<body>
