Very basic state passing

--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,10 @@
 		<script type="text/javascript" src="res/js/framework/GameObject.js"></script>
 		<script type="text/javascript" src="res/js/framework/Renderer.js"></script>
 		<script type="text/javascript" src="res/js/framework/SceneManager.js"></script>
+		<script type="text/javascript" src="res/js/framework/EventHandler.js"></script>
 
 		<script type="text/javascript" src="res/js/gameObjects/Skybox.js"></script>
+		<script type="text/javascript" src="res/js/gameObjects/Player.js"></script>
 	</head>
 
 	<body>
