Server -> client packets

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="/res/js/lib/THREEx.DomEvent.js"></script>
 		<script type="text/javascript" src="/res/js/lib/THREEx.KeyboardState.js"></script>
 		<script type="text/javascript" src="/res/js/lib/THREE.FlyControlsVelocity.js"></script>
+		<script type="text/javascript" src="/res/js/lib/THREE.ColladaLoader.js"></script>
 
 		<script type="text/javascript" src="res/js/lib/ClientComms.js"></script>
 
