Adding some v. basic asteroids. Need to set asteroid positions using server on game creation

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,8 @@
 	<head>
 		<title>Wat</title>
 
-		<style type="text/css">
-			* { margin: 0; padding: 0; }
-		</style>
+		<link rel="stylesheet" type="text/css" href="res/css/app.css">
+		<link rel="stylesheet" type="text/css" href="res/css/animations.css">
 
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="/res/js/lib/Stats.min.js"></script>
@@ -24,7 +23,10 @@
 		<script type="text/javascript" src="res/js/framework/EventHandler.js"></script>
 
 		<script type="text/javascript" src="res/js/gameObjects/Skybox.js"></script>
+
+		<script type="text/javascript" src="res/js/gameObjects/HUD.js"></script>
 		<script type="text/javascript" src="res/js/gameObjects/Player.js"></script>
+		<script type="text/javascript" src="res/js/gameObjects/Asteroid.js"></script>
 	</head>
 
 	<body>
