Basic HUD stuff. Also starting to track 3d GameObjects using 2d bounding boxes.

--- a/client/index.html
+++ b/client/index.html
@@ -27,9 +27,11 @@
 		<script type="text/javascript" src="res/js/gameObjects/HUD.js"></script>
 		<script type="text/javascript" src="res/js/gameObjects/Player.js"></script>
 		<script type="text/javascript" src="res/js/gameObjects/Asteroid.js"></script>
+		<script type="text/javascript" src="res/js/gameObjects/Cube.js"></script>
 	</head>
 
 	<body>
+		<canvas id="overlay"></canvas>
 		<script type="text/javascript" src="res/js/app.js"></script>
 	</body>
 
