Added utils, 3d -> 2d projection, HUD updates.

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="res/js/lib/ClientComms.js"></script>
 
 		<script type="text/javascript" src="res/js/framework/Prototypes.js"></script>
+		<script type="text/javascript" src="res/js/framework/Utils.js"></script>
 		<script type="text/javascript" src="res/js/framework/Inheritance.js"></script>
 		<script type="text/javascript" src="res/js/framework/GameObject.js"></script>
 		<script type="text/javascript" src="res/js/framework/Renderer.js"></script>
