god knows. pre-pull

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="/res/js/lib/stats.min.js"></script>
 		<script type="text/javascript" src="/res/js/lib/three.min.js"></script>
+		<script type="text/javascript" src="/res/js/lib/Renderer.js"></script>
 
 		<script type="text/javascript" src="res/js/lib/ClientComms.js"></script>
 	</head>
