--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,14 @@
 		<script type="text/javascript" src="res/js/gameObjects/Player.js"></script>
 		<script type="text/javascript" src="res/js/gameObjects/Asteroid.js"></script>
 		<script type="text/javascript" src="res/js/gameObjects/Cube.js"></script>
+
+
+		<script src="res/js/lib/shaders/allShaders.js"></script>
+		<script src="res/js/lib/postprocessing/EffectComposer.js"></script>
+		<script src="res/js/lib/postprocessing/MaskPass.js"></script>
+		<script src="res/js/lib/postprocessing/RenderPass.js"></script>
+		<script src="res/js/lib/postprocessing/ShaderPass.js"></script>
+		<script src="res/js/lib/postprocessing/BloomPass.js"></script>
 	</head>
 
 	<body>
