Starting weapons stuff

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
 		<script type="text/javascript" src="res/js/gameObjects/Player.js"></script>
 		<script type="text/javascript" src="res/js/gameObjects/Asteroid.js"></script>
 		<script type="text/javascript" src="res/js/gameObjects/Cube.js"></script>
+		<script type="text/javascript" src="res/js/gameObjects/PrimaryWeapon.js"></script>
 	</head>
 
 	<body>
