--- a/rewrite/sandbox/renderer/index.html
+++ b/rewrite/sandbox/renderer/index.html
@@ -30,13 +30,7 @@
     <script type="text/javascript" src="Asteroid.js"></script>
     <script type="text/javascript" src="Starfield.js"></script>
 
-    <script type="text/javascript" src="ParticleEngine.js"></script>
-    <script type="text/javascript" src="TypedVector3Pool.js"></script>
-    <script type="text/javascript" src="Particles.js"></script>
-
-
-
-    <script type="text/javascript" src="Flame.js"></script>
+    <script type="text/javascript" src="../Particles.js"></script>
 </head>
 
 <body>
