--- a/rewrite/sandbox/renderer/index.html
+++ b/rewrite/sandbox/renderer/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="Starfield.js"></script>
 
     <script type="text/javascript" src="ParticleEngine.js"></script>
-    <script type="text/javascript" src="TypedVector3Pool.js"></script>
+    <script type="text/javascript" src="Vector3Pool.js"></script>
     <script type="text/javascript" src="Particles.js"></script>
 
 
