--- a/rewrite/sandbox/planets/index.html
+++ b/rewrite/sandbox/planets/index.html
@@ -1,13 +1,14 @@
 <html>
 <head>
 	<title>WebGL Renderer</title>
-
     <link rel="stylesheet" type="text/css" href="../../res/css/style.css">
+</head>
 
-	<script type="text/javascript" src="../../res/js/lib/THREE-r58.min.js"></script>
+<body>
+    <script type="text/javascript" src="../../res/js/lib/THREE-r58.min.js"></script>
     <script type="text/javascript" src="../../res/js/lib/THREE.ColladaLoader.js"></script>
     <script type="text/javascript" src="../../res/js/lib/SubdivisionModifier.js"></script>
-	<script type="text/javascript" src="../../res/js/lib/Stats.min.js"></script>
+    <script type="text/javascript" src="../../res/js/lib/Stats.min.js"></script>
 
     <script type="text/javascript" src="../../res/js/lib/shaders/allShaders.js"></script>
     <script type="text/javascript" src="../../res/js/lib/shaders/Noise.js"></script>
@@ -17,7 +18,9 @@
     <script type="text/javascript" src="../../res/js/lib/postProcessing/RenderPass.js"></script>
     <script type="text/javascript" src="../../res/js/lib/postProcessing/ShaderPass.js"></script>
 
-	<script type="text/javascript" src="Renderer.js"></script>
+
+
+    <script type="text/javascript" src="Renderer.js"></script>
     <script type="text/javascript" src="LayerManager.js"></script>
     <script type="text/javascript" src="GameObject.js"></script>
     <script type="text/javascript" src="AssetLoader.js"></script>
@@ -28,14 +31,18 @@
     <script type="text/javascript" src="CameraControls.js"></script>
 
     <script type="text/javascript" src="Planet.js"></script>
+    <script type="text/javascript" src="Skybox.js"></script>
     <script type="text/javascript" src="Starfield.js"></script>
+
+    <script type="text/javascript" src="CONFIG.js"></script>
+    <script type="text/javascript" src="CONSTANTS.js"></script>
+
+    <script type="text/javascript" src="scenes.background.js"></script>
+    <script type="text/javascript" src="scenes.middleground.js"></script>
 
 
     <script type="text/javascript" src="../Particles.js"></script>
 
-</head>
-
-<body>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
