Added rocket booster

--- a/rewrite/sandbox/particles.html
+++ b/rewrite/sandbox/particles.html
@@ -27,7 +27,7 @@
 
 		// .. add particles
 		var particleGroup = new ParticleGroup({
-			blending: THREE.AdditiveBlending,
+			blending: THREE.NormalBlending,
 			texture: THREE.ImageUtils.loadTexture( '../res/textures/smokeparticle.png')
 		});
 
@@ -35,33 +35,35 @@
 		var emitter = new ParticleEmitter({
 			autoInitialize: 	true,
 
-			particlesPerSecond: 100,
-			maxAge: 			10,
+			particlesPerSecond: 1000,
+			maxAge: 			1,
 
 			position: 			new THREE.Vector3( 0, 0, 0 ),
 			positionSpread: 	new THREE.Vector3( 0, 0, 0 ),
 
-			velocity: 			new THREE.Vector3( 0, 100, 0 ),
-			velocitySpread: 	new THREE.Vector3( 50, 0, 50 ),
+			velocity: 			new THREE.Vector3( 0, 0, 0 ),
+			velocitySpread: 	new THREE.Vector3( 400, 400, 400 ),
 
-			acceleration: 		new THREE.Vector3( 0, -50, 0 ),
+			acceleration: 		new THREE.Vector3( 0, 0, 0 ),
 			accelerationSpread: new THREE.Vector3( 0, 0, 0 ),
 
 			angle: 				90,
 			angleSpread: 		90,
 
-			size: 				50,
-			sizeSpread: 		50,
+			size: 				20,
+			// sizeSpread: 		0,
 
 			opacity: 			1,
-			opacitySpread: 		1,
+			// opacitySpread: 		1,
 
-			color: 				new THREE.Vector3( 1, 0.5, 0.5 ),
-			colorSpread: 		new THREE.Vector3( 1, 0, 0 ),
+			color: 				new THREE.Vector3( 1, 1, 0.5 ),
+			// colorSpread: 		new THREE.Vector3( 1, 0, 0 ),
 
-			opacityTweenTo: 	1,
-			// sizeTweenTo: 		,
-			// colorTweenTo: 		new THREE.Vector3( 0.2, 1, 0.5 )
+			// opacityTweenTo: 	0,
+			sizeTweenTo: 		1,
+			colorTweenTo: 		new THREE.Vector3( 1, 1, 1 ),
+
+			emitterDuration: 1
 		});
 
 
@@ -116,14 +118,15 @@
 
 			var dt = clock.getDelta();
 
-			particleGroup.update( dt );
+			particleGroup.update( 0.016 );
 
 
 			renderer.render( scene, camera );
 		}
 
 
-		animate();
+
+		setTimeout(animate, 1000);
 
 	</script>
 
