Added PlasmaCannon class. Stress testing using 12 ships and new bullets every 20 frames. Added Ship class.

--- a/rewrite/sandbox/planets/index.html
+++ b/rewrite/sandbox/planets/index.html
@@ -33,6 +33,8 @@
     <script type="text/javascript" src="Planet.js"></script>
     <script type="text/javascript" src="Skybox.js"></script>
     <script type="text/javascript" src="Starfield.js"></script>
+    <script type="text/javascript" src="Ship.js"></script>
+    <script type="text/javascript" src="PlasmaCannon.js"></script>
 
     <script type="text/javascript" src="CONFIG.js"></script>
     <script type="text/javascript" src="CONSTANTS.js"></script>
