Added shitty rocket. Also added resolution scaling to renderer

--- a/rewrite/sandbox/planets/index.html
+++ b/rewrite/sandbox/planets/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="Starfield.js"></script>
     <script type="text/javascript" src="Ship.js"></script>
     <script type="text/javascript" src="PlasmaCannon.js"></script>
+    <script type="text/javascript" src="Rocket.js"></script>
 
     <script type="text/javascript" src="CONFIG.js"></script>
     <script type="text/javascript" src="CONSTANTS.js"></script>
