--- a/rewrite/sandbox/shaders/particles.html
+++ b/rewrite/sandbox/shaders/particles.html
@@ -13,6 +13,8 @@
         uniform vec3 customColor;
         uniform vec3 customColorEnd;
         uniform int hasPerspective;
+        uniform float opacity;
+        uniform float opacityEnd;
 
         attribute vec3 acceleration;
         attribute vec3 velocity;
@@ -22,10 +24,17 @@
 
         varying vec4 vColor;
 
-        // float Lerp() {
-            //
-        // }
+        // Linearly lerp a float
+        float Lerp( float start, float end ) {
+            return (start + (end - start) * (age / duration));
+        }
 
+        // Linearly lerp a vector3
+        vec3 Lerp( vec3 start, vec3 end ) {
+            return (start + (end - start) * (age/duration));
+        }
+
+        // Return the size of the particle
         float GetSize( float newSize, vec4 mvPosition ) {
             if( hasPerspective == 1 ) {
                 newSize = newSize * (300.0 / length( mvPosition.xyz) );
@@ -34,11 +43,21 @@
             return newSize;
         }
 
+
+        // Integrate acceleration into velocity and apply it to the particle's position
         vec4 GetPos() {
             vec3 newPos = vec3( position );
-            vec3 v = velocity * age;
-            vec3 a = acceleration * age;
-            newPos = newPos + v + a;
+
+            float positionInTime = age / duration;
+
+            // Move acceleration & velocity vectors to the value they should be at the current age
+            vec3 a = acceleration * positionInTime;
+            vec3 v = velocity * positionInTime;
+
+            // Move velocity vector to correct values at this age
+            v = v + (a * age);
+
+            newPos = newPos + v;
             vec4 mvPosition = modelViewMatrix * vec4( newPos, 1.0 );
 
             gl_PointSize = GetSize( size, mvPosition );
@@ -49,8 +68,13 @@
         void main() {
             if( alive > 0.5 ) {
                 // Integrate color "tween"
-                vec3 color = (customColor * age) - (customColorEnd * age);
-                vColor = vec4( customColor - color, duration - age );
+                vec3 color = vec3( customColor );
+                color = Lerp( customColor, customColorEnd );
+
+                // Store the color of this particle in the varying vColor, so frag shader can access it.
+                vColor = vec4( color, Lerp( opacity, opacityEnd ) );
+
+                // Set the position of this particle
                 gl_Position = projectionMatrix * GetPos();
             }
             else {
@@ -96,9 +120,9 @@
         var shaderMaterial, cubeGeometry, cubeMesh, uniforms, attributes;
 
         var basePos = new THREE.Vector3(); // starting position
-        var duration = 1, // seconds
+        var duration = 5, // seconds
             dtInc = 1 / duration, // step size in seconds
-            particlesPerSecond = 30000;
+            particlesPerSecond = 1000;
 
 
         var numParticles = particlesPerSecond * duration;
@@ -114,15 +138,16 @@
             duration: { type: 'f', value: duration },
             texture: { type: 't', value: THREE.ImageUtils.loadTexture('../../res/textures/smokeparticle.png') },
             hasPerspective: { type: 'i', value: 1 },
-            colorize: { type: 'i', value: 1 }
+            colorize: { type: 'i', value: 1 },
+            opacity: { type: 'f', value: 1.0 },
+            opacityEnd: { type: 'f', value: 0.0 }
         };
         attributes = {
             acceleration: { type: 'v3', value: [] },
             velocity: { type: 'v3', value: [] },
             alive: { type: 'f', value: [] },
             age: { type: 'f', value: [] },
-            size: { type: 'f', value: [] },
-            needsRepositioning: { type: 'i', value: [] }
+            size: { type: 'f', value: [] }
         };
 
 
@@ -130,7 +155,7 @@
         function init() {
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 10000);
-            camera.position.z = 300;
+            camera.position.z = 100;
             renderer = new THREE.WebGLRenderer();
             renderer.setSize( window.innerWidth, window.innerHeight );
             renderer.setClearColor(0x000000)
@@ -171,10 +196,9 @@
 
             for(var i = 0; i < numParticles; ++i) {
                 cubeGeometry.vertices[i] = new THREE.Vector3();
-                a.acceleration.value.push( randPositionOnSphere(basePos, 50) );
-                a.velocity.value.push( new THREE.Vector3(0, 0, 0) );
-                a.needsRepositioning.value.push( 0 );
-                a.size.value.push( Math.random() * 10 );
+                a.acceleration.value.push( new THREE.Vector3(Math.random() * 30 - 15, -50, Math.random() * 30 - 15) );
+                a.velocity.value.push( new THREE.Vector3(0, 200, 0) );
+                a.size.value.push( Math.random() * 5 );
 
                 a.age.value.push(0.0);
                 a.alive.value.push( 0.0 );
@@ -248,6 +272,7 @@
 
                 for( var i = startIndex; i < endIndex; i++ ) {
                     alive[i] = 1.0;
+                    cubeGeometry.vertices[ i ].set(mouseX, -mouseY, 0);
                 }
             }
 
